Definitions: Q is exact, not a maximum.

--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -271,7 +271,7 @@ Here, the prime annotation indicates posterior state. Individual components may 
   \item[$\mathsf{N} = 2$] The number of ticket entries per validator.
   \item[$\mathsf{O} = 8$] The maximum number of items in the authorizations pool.
   \item[$\mathsf{P} = 6$] The slot period, in seconds.
-  \item[$\mathsf{Q} = 80$] The maximum number of items in the authorizations queue.
+  \item[$\mathsf{Q} = 80$] The number of items in the authorizations queue.
   \item[$\mathsf{R} = 10$] The rotation period of validator-core assignments, in timeslots.
   \item[$\mathsf{S} = 1024$] The maximum number of entries in the accumulation queue.
   \item[$\mathsf{U} = 5$] The period in timeslots after which reported but unavailable work may be replaced.
