Numbering is by section

--- a/preamble.tex
+++ b/preamble.tex
@@ -30,6 +30,10 @@
 \usepackage{ifthen}
 \usepackage{hyperref}
 \usepackage{changepage}
+
+\numberwithin{equation}{section}
+\renewcommand{\theequation}{\thesection.\arabic{equation}}
+
 \strictpagecheck
 \addbibresource{biblio.bib}
 
