--- a/text/ratings.tex
+++ b/text/ratings.tex
@@ -53,7 +53,7 @@ The objective statistics are updated in line with their description, formally:
         \end{cases}\\
         \pi'_0[v]_g &\equiv \mathbf{a}[v]_g + (\kappa'_v \in \mathbf{R})\\
         \pi'_0[v]_a &\equiv \mathbf{a}[v]_a + (\exists a \in \xtassurances : a_v = v)
-    \end{aligned}\right.
+    \end{aligned}\right.\!\!\!\!
 \end{align}
 
 Note that $\mathbf{R}$ is the \emph{Reporters} set, as defined in equation \ref{eq:guarantorsig}.
