--- a/text/intro.tex
+++ b/text/intro.tex
@@ -4,7 +4,7 @@
 
 %As its namesake paper pointed out, the name \emph{Polkadot} means several things depending on context. It might mean variously the product vision set forth in said paper of a scalable heterogeneous multichain; the decentralized blockchain network and service which came to be along with its state and history; or possibly the protocol and technology-base utilized in order to maintain and run this network and others such as \emph{Kusama}.
 
-In this paper, we introduce a decentralized, crypto-economic protocol to which the Polkadot Network could conceivably transition itself in a major revision. Following this eventuality (which must not be taken for granted since Polkadot is a decentralized network) this protocol might also become known as \emph{Polkadot} or some derivation thereof. However, at this stage this is not the case, therefore our proposed protocol will for the present be known as \Jam.
+In this paper, we introduce a decentralized, crypto-economic protocol to which the Polkadot Network will transition itself in a major revision on the basis of approval by its governance apparatus.
 
 An early, unrefined, version of this protocol was first proposed in Polkadot Fellowship \textsc{rfc}\oldstylenums{31}, known as \emph{CoreJam}. CoreJam takes its name after the collect/refine/join/accumulate model of computation at the heart of its service proposition. While the CoreJam \textsc{rfc} suggested an incomplete, scope-limited alteration to the Polkadot protocol, \Jam refers to a complete and coherent overall blockchain protocol.
 
