--- a/text/work_packages_and_reports.tex
+++ b/text/work_packages_and_reports.tex
@@ -249,7 +249,8 @@ We define the availability specifier function $\newavailabilityspecifier$, which
       h,\,
       \is{l}{|\mathbf{b}|},\,
       u,\,
-      \is{e}{\mathcal{M}(\mathbf{s})}
+      \is{e}{\mathcal{M}(\mathbf{s})},\,
+      \is{n}{|\mathbf{s}|}
     }
   \end{aligned}\right.\!\!\!\!\!
 \end{equation}
