--- a/text/overview.tex
+++ b/text/overview.tex
@@ -21,10 +21,10 @@ The header is a collection of metadata primarily concerned with cryptographic re
 
 \begin{description}
   \item[tickets] Tickets, used for the mechanism which manages the selection of validators for the permissioning of block authoring. This component is denoted $\xttickets$.
-  \item[judgments] Votes, by validators, on dispute(s) arising between them presently taking place. This is denoted $\xtdisputes$.
   \item[preimages] Static data which is presently being requested to be available for workloads to be able to fetch on demand. This is denoted $\xtpreimages$.
-  \item[availability] Assurances by each validator concerning which of the input data of workloads they have correctly received and are storing locally. This is denoted $\xtassurances$.
   \item[reports] Reports of newly completed workloads whose accuracy is guaranteed by specific validators. This is denoted $\xtguarantees$.
+  \item[availability] Assurances by each validator concerning which of the input data of workloads they have correctly received and are storing locally. This is denoted $\xtassurances$.
+  \item[disputes] Information relating to disputes between validators over the validity of reports. This is denoted $\xtdisputes$.
 \end{description}
 
 \subsection{The State}
