Post-Accumulate Preimage Integration

--- a/preamble.tex
+++ b/preamble.tex
@@ -179,6 +179,11 @@
 \newcommand*{\defxfers}{\seq{\defxfer}}
 \newcommand*{\beefycommitmap}{\mathbf{C}}
 
+\newcommand*{\accountspre}{\delta}
+\newcommand*{\accountspostacc}{\delta^\dagger}
+\newcommand*{\accountspostxfer}{\delta^\ddagger}
+\newcommand*{\accountspostpreimage}{\delta'}
+
 \newcommand*{\gascounter}{\varrho}
 \newcommand*{\registers}{\omega}
 \newcommand*{\memory}{\mu}
