Introduce zero-memory and void-memory hostcalls

--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -96,9 +96,10 @@
   \item[$\Omega$] Virtual machine host-call functions. See appendix \ref{sec:virtualmachineinvocations}. %	Ω
   \begin{description}
     \item[$\Omega_A$] Assign-core host-call.
+    \item[$\Omega_B$] Empower-service host-call.
     \item[$\Omega_C$] Checkpoint host-call.
     \item[$\Omega_D$] Designate-validators host-call.
-    \item[$\Omega_E$] Empower-service host-call.
+    \item[$\Omega_E$] Export segment host-call.
     \item[$\Omega_F$] Forget-preimage host-call.
     \item[$\Omega_G$] Gas-remaining host-call.
     \item[$\Omega_H$] Historical-lookup-preimage host-call.
@@ -114,10 +115,11 @@
     \item[$\Omega_R$] Read-storage host-call.
     \item[$\Omega_T$] Transfer host-call.
     \item[$\Omega_U$] Upgrade-service host-call.
+    \item[$\Omega_V$] Void inner-\textsc{pvm} memory host-call.
     \item[$\Omega_W$] Write-storage host-call.
     \item[$\Omega_X$] Expunge-\textsc{pvm} host-call.
     \item[$\Omega_Y$] Import segment host-call.
-    \item[$\Omega_Z$] Export segment host-call.
+    \item[$\Omega_Z$] Zero inner-\textsc{pvm} memory host-call.
   \end{description}
 \end{description}
 
@@ -224,7 +226,7 @@ Here, the prime annotation indicates posterior state. Individual components may 
   \end{description}
   \item[$\chi$] The privileged service indices. %	χ
   \begin{description}
-    \item[$\chi_m$] The index of the empower service.
+    \item[$\chi_m$] The index of the blessed service.
     \item[$\chi_v$] The index of the designate service.
     \item[$\chi_a$] The index of the assign service.
     \item[$\chi_\mathbf{g}$] The always-accumulate service indices and their basic gas allowance.
