--- a/text/pvm.tex
+++ b/text/pvm.tex
@@ -306,10 +306,13 @@ We assume the skip length $\ell$ is well-defined:
   74&\token{load\_i8}&0&$\reg'_A = \unsigned{\signedn{1}{\memr_{\immed_X}}}$\\ \mrule
   76&\token{load\_u16}&0&$\reg'_A = \de_2(\memr_{\immed_X\dots+2})$\\ \mrule
   66&\token{load\_i16}&0&$\reg'_A = \unsigned{\signedn{2}{\de_2(\memr_{\immed_X\dots+2})}}$\\ \mrule
-  10&\token{load\_u32}&0&$\reg'_A = \de_4(\memr_{\immed_X\dots+4})$\\ \mrule
+  ???&\token{load\_u32}&0&$\reg'_A = \de_4(\memr_{\immed_X\dots+4})$\\ \mrule
+  10&\token{load\_i32}&0&$\reg'_A = \unsigned{\signedn{4}{\de_4(\memr_{\immed_X\dots+4})}}$\\ \mrule
+  ???&\token{load\_u64}&0&$\reg'_A = \de_8(\memr_{\immed_X\dots+8})$\\ \mrule
   71&\token{store\_u8}&0&$\memwr_{\immed_X} = \reg_A \bmod 2^8$\\ \mrule
   69&\token{store\_u16}&0&$\memwr_{\immed_X\dots+2} = \se_2(\reg_A \bmod 2^{16})$\\ \mrule
-  22&\token{store\_u32}&0&$\memwr_{\immed_X\dots+4} = \se_4(\reg_A)$\\
+  22&\token{store\_u32}&0&$\memwr_{\immed_X\dots+4} = \se_4(\reg_A \bmod 2^{32})$\\ \mrule
+  ???&\token{store\_u64}&0&$\memwr_{\immed_X\dots+8} = \se_8(\reg_A)$\\
 \bottomrule
 \end{longtable}
 
